--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  background: https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjXy4P1jePWAhVL7RQKHaYTCm8QjhwIBQ&url=http%3A%2F%2Fwallpapers.ae%2Frainbows-equalizer-bars-wallpaper.html&psig=AOvVaw3-jpozkJBqUzAyST2x810s&ust=1507623635419990
+  background-image: url (http://wallpapers.ae/wp-content/uploads/2015/10/Rainbows-equalizer-bars-wallpaper.jpg);
   font: 18px/1.7 $helvetica;
   color: $gray;
 }
