--- a/style.scss
+++ b/style.scss
@@ -32,13 +32,14 @@ body {
 	
 .container {
   margin: 0 auto;
-  max-width: 850px;
+  max-width: 740px;
+  border-radius: 3pk;
   padding: 0 10px;
   width: 100%;
-  background:rgba(35, 50, 55,0.9);
-	border-radius: 25px;
-    padding: 20px; 
-	border-bottom: 1px solid white;
+  background-colour:rgba(255, 255, 255,0.78);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+	 
+	
 }
 
 h1, h2, h3, h4, h5, h6 {
